<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginBottom="2dp"
    android:elevation="5dp"
    android:id="@+id/paired_fragment"
    android:background="@drawable/background_border">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/ap_black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/remote_hostname"/>

        <TextView
            android:id="@+id/remote_hostname_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/example_host" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="50">

            <TextView
                android:textColor="@color/ap_black"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/remote_port"
                android:layout_weight="60"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/remote_port_example"
                android:id="@+id/paired_sensor_remote_port_text_view"
                android:layout_weight="40"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="50">

            <TextView
                android:textColor="@color/ap_black"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/local_port"
                android:layout_weight="60"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/paired_sensor_local_port_text_view"
                android:text="@string/local_port_example"
                android:layout_weight="40"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="3dp"
        android:layout_weight="25">


        <ImageButton
            android:id="@+id/remove_pairing_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/remove_pairing"
            android:layout_centerVertical="true"
            android:background="@color/ap_white"
            />

        <Button
            android:id="@+id/ping_connected_pair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ping"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/remove_pairing_image"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>


</LinearLayout>